# timestamp-search

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  Makefile.toml  README.md  docker-compose.yml  mise.toml  package.json  pyproject.toml
.github/workflows/: develop.yaml
applications/server/entirypoint/: Cargo.toml
applications/server/presentations/api/: Cargo.toml
applications/server/presentations/api/src/: app_state.rs  lib.rs  middleware.rs  request.rs  response.rs  route.rs  service.rs
applications/server/presentations/api/src/handle/: health.rs  timestamp_search.rs
applications/usecase/: Cargo.toml
applications/usecase/src/: lib.rs  timestamp_parser_service.rs  video_fetch_service.rs  video_indexing_service.rs
applications/video_fetch/: Cargo.toml
applications/video_fetch/src/: main.rs
docker/: docker-compose.test.yml  docker-compose.yml
docker/restful_server/: Dockerfile
docker/video_fetch/: Dockerfile
domains/: Cargo.toml
domains/src/: entities.rs  lib.rs  repositories.rs  services.rs  value_objects.rs
domains/src/entities/: channel.rs  video.rs  video_timestamp.rs
domains/src/repositories/: external_video_repository.rs  internal_timestamp_repository.rs  internal_timestamp_search_repository.rs  internal_video_repository.rs  internal_video_search_repository.rs
domains/src/services/: timestamp_indexing_service.rs  timestamp_parser_service.rs  video_fetch_service.rs  video_indexing_service.rs
domains/src/value_objects/: channel_id.rs  channel_name.rs  elapsed_time.rs  height.rs  limit.rs  page.rs  per_page.rs  search_query_text.rs  seconds.rs  thumbnail.rs  thumbnail_url.rs  timestamp.rs  timestamp_description,rs  timestamp_description.rs  timestamp_id.rs  video_description.rs  video_id.rs  video_tag.rs  video_title.rs  width.rs
infra/meilisearch/: Cargo.toml
infra/meilisearch/src/: client.rs  config.rs  index.rs  lib.rs  repositories.rs
infra/meilisearch/src/index/: timestamp.rs  video.rs
infra/meilisearch/src/repositories/: timestamp_crud.rs  timestamp_search.rs  video_crud.rs
infra/youtube/: Cargo.toml
infra/youtube/src/: config.rs  lib.rs  repositories.rs
infra/youtube/src/adapter/: channel.rs  thumbnail.rs  video.rs
infra/youtube/src/repositories/: youtube_video.rs  youtubel_video.rs
infra/youtube/tests/: video_repository.rs
scripts/: .gitignore  client.py  index_stats.py  indexes.json  mise.toml  setup_meili_indexes.py  video_index_settings.json
scripts/settings/: timestamp_index_settings.json
scripts/setup-indexes/: Dockerfile  client.py  requirements.txt
scripts/setup-indexes/settings/: timestamp_index_settings.json  video_index_settings.json
service-backend/: .gitignore  Cargo.toml  mise.toml  rust-toolchain.toml
service-backend/lib/domains/: Cargo.toml
service-backend/lib/domains/src/: entities.rs  repositories.rs  value_objects.rs
service-backend/lib/domains/src/entities/: channel.rs  video.rs  video_timestamp.rs
service-backend/lib/domains/src/repositories/: external_video_repository.rs  internal_timestamp_repository.rs  internal_timestamp_search_repository.rs  internal_video_repository.rs  internal_video_search_repository.rs
service-backend/lib/domains/src/value_objects/: channel_id.rs  channel_name.rs  elapsed_time.rs  height.rs  limit.rs  offset.rs  page.rs  per_page.rs  search_query_text.rs  thumbnail.rs  thumbnail_url.rs  timestamp_id.rs  video_description.rs  video_detail.rs  video_id.rs  width.rs
service-backend/lib/errors/: Cargo.toml
service-backend/lib/errors/src/: lib.rs
service-backend/lib/meilisearch/: Cargo.toml
service-backend/lib/meilisearch/src/: adapter.rs  client.rs  config.rs  lib.rs  repositories.rs
service-backend/lib/meilisearch/src/index/: timestamp.rs  video.rs
service-backend/lib/meilisearch/src/repositories/: timestamp_crud.rs  timestamp_search.rs  video_crud.rs
service-backend/lib/types/: Cargo.toml
service-backend/lib/types/src/: lib.rs  numeric_value.rs  string_value.rs
service-backend/lib/usecase/: Cargo.toml
service-backend/lib/usecase/src/: lib.rs  timestamp_indexing_service.rs  timestamp_parser_service.rs  video_fetch_service.rs  video_indexing_service.rs
service-backend/lib/youtube/: Cargo.toml
service-backend/lib/youtube/src/: adapter.rs  config.rs  lib.rs
service-backend/lib/youtube/src/adapter/: channel.rs  thumbnail.rs  video.rs
service-backend/lib/youtube/src/repositories/: youtube_video.rs
service-backend/services/restful_server/: Cargo.toml  Dockerfile
service-backend/services/restful_server/src/: main.rs
service-backend/services/restful_server/src/api/: app_state.rs  config.rs  handle.rs  middleware.rs  mod.rs  request.rs  response.rs  route.rs  service.rs
service-backend/services/restful_server/src/api/handle/: health.rs  timestamp_search.rs
service-backend/services/video_fetch/: Cargo.toml
service-backend/services/video_fetch/src/: main.rs
service-backend/tests/: Cargo.toml
service-backend/tests/integration/: mod.rs  video_fetch.rs
service-backend/tests/utils/: Cargo.toml
shared/errors/: Cargo.toml
shared/errors/src/: lib.rs
shared/types/: Cargo.toml
shared/types/src/: lib.rs  numeric_value.rs  string_value.rs
tests/: Cargo.toml
tests/integration/: mod.rs  video_fetch.rs
tests/utils/: Cargo.toml
