[workspace]
package.edition = "2024"
package.publish = false
package.license = "MIT"
package.authors = ["boxpurin"]
package.rust-version = "1.87.0"
resolver = "2"

members = ["infra/meilisearch", "applications/server/presentations/api", "applications/video_fetch", "domains","shared/errors", "shared/types", "applications/server/entirypoint"]


[workspace.dependencies]
domains = { path = "domains" }
meilisearch = { path = "infra/meilisearch" }
types = { path = "shared/types" }
errors = { path = "shared/errors" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11.0"
serde_json = "1.0"
sha2 = "0.10.8"
tokio = {version = "1.42.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.27"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8.4", features=["json", "macros"]  }
futures = "0.3.31"
hyper = "1.5.2"
garde = { version = "0.22.0", features = ["derive"] }
anyhow = "1.0.95"
async-trait = "0.1.83"
once_cell = "1.8.0"
google-youtube3 = { version = "6.0.0" }