[workspace]
package.edition = "2024"
package.publish = false
package.license = "MIT"
package.authors = ["boxpurin"]
package.rust-version = "1.87.0"
resolver = "3"

members = [
    "infra/meilisearch",
    "applications/server/presentations/api",
    "applications/video_fetch",
    "domains",
    "shared/errors",
    "shared/types",
    "applications/server/entirypoint",
    "infra/youtube",
    "tests",
    "tests/utils",
    "tests/internal",
]

[workspace.dependencies]
domains = { path = "domains" }
meilisearch = { path = "infra/meilisearch" }
youtube = { path = "infra/youtube" }
types = { path = "shared/types" }
errors = { path = "shared/errors" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11.0"
serde_json = "1.0"
sha2 = "0.10.8"
tokio = {version = "1.42.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.27"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
thiserror = { version = "2.0.12" }
tower = {version = "0.5.2"}
tower-layer = "0.3.3"
test_utils={ path = "./tests/utils" }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8.4", features=["json", "macros"]  }
meilisearch-sdk = "0.29.1"
hyper = "1.6.0"
garde = { version = "0.22.0", features = ["derive", "url", "regex"] }
anyhow = "1.0.98"
async-trait = "0.1.83"
once_cell = "1.21.3"
google-youtube3 = { version = "6.0.0" }
mockall = { version = "0.13.1" }
mockito = { version = "1.7.0" }
rstest = { version = "0.25.0" }
clap = { version = "4.5.42", features = ["derive"] }
envy = "0.4.2"
fancy-regex = "0.16.1"
itertools = "0.14.0"
rand = {version = "0.9.2"}