[package]
name = "domains"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
test_util = []

[dependencies]
types.workspace = true
errors.workspace = true
chrono.workspace = true
sha2.workspace = true
serde.workspace = true
async-trait.workspace = true
garde.workspace = true
mockall.workspace = true
dyn-clone.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rstest.workspace = true
fancy-regex.workspace = true
rand.workspace = true
url.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
mockall.workspace = true