[workspace]
package.edition = "2024"
package.publish = false
package.license = "MIT"
package.authors = ["boxpurin"]
resolver = "3"

members = [
    "services/restful_server",
    "services/video_fetch",
    "lib/meilisearch",
    "lib/usecase",
    "lib/domains",
    "lib/errors",
    "lib/types",
    "lib/youtube",
    "tests",
    "tests/utils",
]

[workspace.dependencies]
domains = { path = "lib/domains" }
meilisearch = { path = "lib/meilisearch" }
youtube = { path = "lib/youtube" }
types = { path = "lib/types" }
errors = { path = "lib/errors" }
usecase =  { path = "lib/usecase" }
test_utils={ path = "tests/utils" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11.0"
serde_json = "1.0"
sha2 = "0.10.8"
tokio = {version = "1.42.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.27"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
thiserror = { version = "2.0.12" }
tower = {version = "0.5.2"}
tower-layer = "0.3.3"
url = "2.5.7"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8.4", features=["json", "macros"]  }
meilisearch-sdk = "0.29.1"
hyper = "1.6.0"
garde = { version = "0.22.0", features = ["derive", "url", "regex"] }
anyhow = "1.0.98"
async-trait = "0.1.83"
once_cell = "1.21.3"
google-youtube3 = { version = "6.0.0" }
mockall = { version = "0.13.1" }
mockito = { version = "1.7.0" }
rstest = { version = "0.25.0" }
clap = { version = "4.5.42", features = ["derive"] }
envy = "0.4.2"
fancy-regex = "0.16.1"
itertools = "0.14.0"
leaky-bucket = { version = "1.1.2" }
rand = {version = "0.9.2"}

[profile.dev]
incremental = true