[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
autotests = false

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[lib]
path = "lib.rs"

[dev-dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["now"] }
domains = { workspace = true , features = ["test_util"] }
errors.workspace = true
meilisearch.workspace = true
rstest.workspace = true
tokio.workspace = true
types.workspace = true
youtube.workspace = true
