[package]
name = "usecase"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
domains.workspace = true
errors.workspace = true
fancy-regex.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true