[package]
name = "meilisearch"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
meilisearch-sdk = { version = "^0.28.0" }
types.workspace = true
errors.workspace = true
domains.workspace = true
serde.workspace = true
chrono.workspace = true