[package]
name = "meilisearch"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
meilisearch-sdk = { version = "^0.29.1" }
types.workspace = true
errors.workspace = true
async-trait.workspace = true
domains.workspace = true
serde.workspace = true
chrono.workspace = true
mockall.workspace = true