[package]
name = "meilisearch"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
meilisearch-sdk = { version = "^0.29.1" }
types.workspace = true
errors.workspace = true
async-trait.workspace = true
domains = { workspace = true , features = ["test_util"] }
serde.workspace = true
chrono.workspace = true
mockall.workspace = true
tracing.workspace = true
envy.workspace = true
once_cell.workspace = true
itertools.workspace = true

[dev-dependencies]
tokio.workspace = true
anyhow.workspace = true