[package]
name = "youtube"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
domains = { workspace = true , features = ["test_util"] }
errors.workspace = true
async-trait.workspace = true
chrono.workspace = true
google-youtube3.workspace = true
tokio.workspace = true
mockall.workspace = true
mockito.workspace = true
rstest.workspace = true
tracing.workspace = true
tracing-test.workspace = true
serde.workspace = true
once_cell.workspace = true
envy.workspace = true
thiserror.workspace = true
serde_json.workspace = true