[package]
name = "video_fetch"
version = "0.1.0"
edition="2024"
publish = false
license = "MIT"
authors = ["boxpurin"]

[dependencies]
tokio = { version = "1.47.1" , features = ["macros", "rt-multi-thread"] }
domains.workspace = true
youtube.workspace = true
meilisearch.workspace = true
errors.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
usecase.workspace = true