[package]
name = "api"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
axum = { workspace = true }
tokio = { workspace = true , features = ["time"] }
tower.workspace = true
garde.workspace = true
chrono.workspace = true
errors.workspace = true
tower-layer.workspace = true
tracing.workspace = true
domains.workspace = true
leaky-bucket = { version = "1.1.2" }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

[dev-dependencies]
async-trait.workspace = true
tracing-test.workspace = true